www/css/style.css
/* ... */
.tabbed-slidebox .tsb-icons .scroll a.active {
  font-size: 1.5em!important;
  border-bottom: 3px solid #ccc;
}
.slider-slide h4{
  color:#fff;
  margin-top:10px;
}

.tabbed-slidebox .tsb-icons:after{
  display:none;
}

.menuPopover {
  height: 170px!important;
}
.menuPopoverLog {
  height: 120px!important;
}

.detailedPost {
  width: 80%!important;
}

.text-class {
  background-color: #000!important;
  color: #fff!important;
}
.width100 {
  width: 100%;
}
.image-list-thumb {
    padding: 2px 2px 2px 2px;
    height: 150px;
}
 
.image-modal {
    width: 100% !important;
    height: 100%;
    top: 0 !important;
    left: 0 !important;
}
 
.gallery-transparent {
  background: rgba(0,0,0,0.7);
}
 
.galler-slider {
    width: 100%;
    height: 100%;
}
 
.gallery-image {
    width: 100%;
    height: 600px;
    background-size: contain;
    background-repeat: no-repeat;
    background-position: center, center;
}

.platform-ios.sr-on .pane,
.platform-ios.sr-on .scroll-content{
    position: static;
}

.platform-ios.sr-on .scroll-content.has-header > .scroll {
    margin-top: 80px;
}

div.pull-right {
  float: right;
  padding-left: 1rem;
  max-width: 50%;
}

div.pull-left {
  float: left;
  padding-right: 1rem;
  max-width: 50%;
}

div.text-justify {
  text-align: justify;
}

div.text-rtl {
  direction: rtl;
}
p.pull-right {
  float: right;
  padding-left: 1rem;
  max-width: 50%;
}

p.pull-left {
  float: left;
  padding-right: 1rem;
  max-width: 50%;
}

p.text-justify {
  text-align: justify;
}

p.text-rtl {
  direction: rtl;
}

div.text-center {
  margin-left: auto;
  margin-right: auto;
  text-align: center;
  vertical-align: middle;
  display: block;
}

p.text-center {
  margin-left: auto;
  margin-right: auto;
  text-align: center;
  vertical-align: middle;
  display: block;
}
p.text-left {
  margin-left: auto;
  margin-right: auto;
  text-align: left;
  display: block;
}
div.text-left {
  text-align: left;
}


.full-image {

}

.masonry-layout {
  column-count: 1;
  column-gap: 0;
  -webkit-column-count: 1;
  -moz-column-count: 1;
  -webkit-column-gap: 0;
  -moz-column-gap: 0;
}
@media (min-width: 768px) {
  .masonry-layout {
    column-count: 2;
    -webkit-column-count: 2;
    -moz-column-count: 2;
  }
}
@media (min-width: 1200px) {
  .masonry-layout {
    column-count: 3;
    -webkit-column-count: 3;
    -moz-column-count: 3;
  }
}

.masonry-layout__panel {
  /*padding: 0 0.5px;*/
  margin-bottom: 0;
  -webkit-break-inside: avoid;
  -moz-break-inside: avoid;
  break-inside: avoid;
}
.masonry-layout__panel-content {
  padding: 1px;
  border-radius: 5px;
}


.bodytext table {
    border-collapse: collapse;
    width: 100%
    max-width: 100%;
    vertical-align: middle!important;
    border: 1px solid #ddd;
}

.bodytext td{
    display:inline-block;
    overflow-wrap: break-word;
    word-wrap: break-word;
    word-break: break-word;
    hyphens: auto;
}

.bodytext tr{
  width: 100%;
  display:block;
}
.bodytext tr:hover{background-color:#f5f5f5}
.bodytext tr:nth-child(even) {background-color: #f2f2f2}
.bodytext th {
  text-align: center;
  padding: 10px;
  font-style: bold;
  height: 50px;
}
.posting input, .posting textarea, .posting button.button {
  border: 1px solid #ddd!important;
}
.posting select {
  min-height: 30px;
  font-size: 12px;
  line-height: 26px; 
}
.posting .row, .posting .col {
  margin: 0!important;
  padding: 5px 0!important;
}
.item-thumbnail-left > img:first-child,
.item-thumbnail-left .item-image,
.item-thumbnail-left .item-content > img:first-child {
    max-width: 80px;
    max-height: 80px;
    width: 100%;
    height: auto!important;
}

.row.profile {
  padding: 3px 0px;
}

.row.twrap {
  font-size: 11pt;
}

.tags {
  margin: 0;
  overflow: hidden!important;
  padding: 0;
  width: 100%;
}

.tags span {
  float: left; 
}

.tag {
  background: #eee;
  border-radius: 3px 0 0 3px;
  color: #999;
  display: inline-block;
  height: 26px;
  line-height: 26px;
  padding: 0 20px 0 23px;
  position: relative;
  margin: 0 10px 10px 0;
  text-decoration: none;
  -webkit-transition: color 0.2s;
}

.tag::before {
  background: #fff;
  border-radius: 10px;
  box-shadow: inset 0 1px rgba(0, 0, 0, 0.25);
  content: '';
  height: 6px;
  left: 10px;
  position: absolute;
  width: 6px;
  top: 10px;
}

.tag::after {
  background: #fff;
  border-bottom: 13px solid transparent;
  border-left: 10px solid #eee;
  border-top: 13px solid transparent;
  content: '';
  position: absolute;
  right: 0;
  top: 0;
}

.tag:hover {
  background-color: crimson;
  color: white;
}

.tag:hover::after {
   border-left-color: crimson; 
}

em {
  font-style: italic;
}

.selectable {
  -webkit-user-select: auto;
  -khtml-user-select: auto;
  -moz-user-select: auto;
  -ms-user-select: auto;
  -o-user-select: auto;
  user-select: auto;
}
.login button {
    border: 1px solid #eee!important;
}

.story.bar.bar-footer {
  margin: 0;
  padding: 0;
  height: auto;
}

.row.postdetails {
  font-size: 10pt;
}

